# job_listing_scrapper

./: .gitignore  pyproject.toml
data/: jobs.json  text.md
proxy_auth_extension/: manifest.json
src/: gemini.py  helper.py  jobs_data.csv  jobs_data.xlsx  jobs_manager.py  main.py  notebook.ipynb  pandas_utils.py  pandas_utlils.py  run.py
